animation fixed. need to fix it on IE still.

--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -1,17 +1,28 @@
 .header {
-  position: relative;
+  position: fixed;
+  top: 0; left: 0;
   background-color: #FFF;
   z-index: 900;
-  opacity: 1 !important;
+  opacity: 0;
+  transform: translate3d(0, -100%, 0);
+}
+.header.normal {
+  opacity: 1; 
+  transform: translate3d(0, 0, 0); 
+}
+
+.header.slide-down {
+  opacity: 1; 
+  transform: translate3d(0, 0, 0); 
 }
 @media (min-width: 1366px) {
-  .header.off {
-    opacity: 0;
-    display: none;
+  .header {
+    position: relative;
+    transform: translate3d(-101%, 0, 0);
   }
 }
 .mobile-header {
-  position: fixed;
+  position: relative;
   display: flex;
   flex-flow: row nowrap;
   justify-content: center;
@@ -21,9 +32,9 @@
   height: auto;
   background-color: transparent;
   z-index: 901;
-  opacity: 1 !important;
+  opacity: 1;
 }
-.mobile-header.off {
+/* .mobile-header.off {
   opacity: 0;
   display: none;
 }
@@ -31,7 +42,7 @@
   .mobile-header.off {
     transform: translateX(-100%);
   }
-}
+} */
 .mobile-header .navigation-titles {
   width: 100%;
   background: #fff;
@@ -70,12 +81,12 @@
   z-index: 910;
   padding: 0;
   margin: 0;
-  opacity: 1 !important;
+  opacity: 1;
 }
-.ham-nav-button.off {
+/* .ham-nav-button.off {
   opacity: 0å;
   display: none;
-}
+} */
 @media (min-width: 1024px) {
   .ham-nav-button {
     left: 12px;
@@ -154,16 +165,17 @@
   justify-content: space-between;
   align-items: center;
   position: relative;
-  height: calc(100% - 64px);
+  height: calc(100vh - 64px);
   width: calc(100% - 64px);
   position: fixed;
   top: 0;
   left: 0;
   z-index: 905;
   transform: translateX(-100%);
-  transition: transform 500ms ease-in-out;
+  transition: transform 500ms ease-in-out, opacity 1s ease-in-out;
   overflow-y: auto;
 }
+
 .app-header.open {
   transform: translateX(0);
 }
@@ -181,7 +193,6 @@
 @media (min-width: 1366px) {
   .app-header {
     height: calc(100vh - 64px);
-    transform: translateX(0);
     position: relative;
     top: unset;
     left: unset;
@@ -190,6 +201,17 @@
     margin-right: 0;
     padding-right: 32px;
     border-right: 1px solid #A1C6CF;
+    transform: translateX(-101%);
+  }
+
+  .app-header.normal {
+    opacity: 1; 
+    transform: translateX(0); 
+  }
+
+  .app-header.slide-over {
+    opacity: 1; 
+    transform: translateX(0); 
   }
 }
 
